; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_file_issendable.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_descrip.c_file_issendable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileproc = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@LCK_MTX_ASSERT_OWNED = common dso_local global i32 0, align 4
@FG_CONFINED = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @file_issendable(i32 %0, %struct.fileproc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.fileproc*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.fileproc* %1, %struct.fileproc** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @LCK_MTX_ASSERT_OWNED, align 4
  %8 = call i32 @proc_fdlock_assert(i32 %6, i32 %7)
  %9 = load %struct.fileproc*, %struct.fileproc** %5, align 8
  %10 = getelementptr inbounds %struct.fileproc, %struct.fileproc* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  switch i32 %11, label %22 [
    i32 128, label %12
    i32 129, label %12
    i32 131, label %12
    i32 130, label %12
    i32 132, label %12
  ]

12:                                               ; preds = %2, %2, %2, %2, %2
  %13 = load %struct.fileproc*, %struct.fileproc** %5, align 8
  %14 = getelementptr inbounds %struct.fileproc, %struct.fileproc* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @FG_CONFINED, align 4
  %19 = and i32 %17, %18
  %20 = icmp eq i32 0, %19
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %3, align 4
  br label %24

22:                                               ; preds = %2
  %23 = load i32, i32* @FALSE, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %22, %12
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @proc_fdlock_assert(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
